# music_jam

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/: __init__.py  api.py  api_schemes.py  app.py  methods_s3.py  pyproject.toml  s3.py  server.py  services.py  settings.py
backend/db/: database.py  hands_db.py  models.py
backend/domain/: room.py  team.py
backend/routes/: get_routes.py  post_routes.py  routes.py  schemes.py  ws_routes.py
backend/services/: crypto.py  parser.py  s3.py  services.py
docs/: analize.md  first-test.md  second-test.md
frontend/: index.html  yandex_9987d92b42e07044.html
frontend/src/: app.js
frontend/src/components/: AddMusicModal.js  AdminCalculatorModal.js  AnswerModals.js  ButtonLoader.js  ConfirmModal.js  CorrectAnswerModal.js  EditorSidebar.js  EndGameModal.js  Error.js  GameSettingsPanels.js  GamesList.js  OnGameRating.js  OnGameTable.js  PlayerGameSidebar.js  UI.js  WaitingPanels.js
frontend/src/core/: Component.js  EventBus.js  Router.js
frontend/src/domain/: Cell.js  GameSettings.js  QuestionService.js  Song.js
frontend/src/services/: AccountServices.js  AudioManager.js  GamesServices.js  NetServices.js  RoomService.js  RouteServices.js
frontend/src/views/: AccountView.js  AdminGameView.js  AdminWaitingRoomView.js  EnterInviteCodeView.js  GameEndingView.js  GameEndingViewUniversal.js  GameSettingsView.js  GameView.js  HostAdminView.js  LobbyView.js  LoginView.js  RegisterView.js  StartView.js  WaitingRoomView.js
frontend/styles/: base.css  components.css  main.css  variables.css
(+8 files in other folders)
