[tool.poetry]
name = "music_jam_backend"
version = "0.0.1"
description = "MusicJam. Guess music, enjoy with friends!"
authors = [
    "Alex Spirin",
    "Dmitry Veselkov",
    "Elizaveta Vinogradova",
    "FayTim"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = {extras = ["async"], version = "^3.1.3"}
flask-socketio = "^5.3.6"
boto3 = "^1.42.88"
sqlalchemy = "^2.0.49"
pydantic-settings = "^2.13.1"
asyncpg = "^0.31.0"
pyjwt = "^2.12.1"
fastapi = "^0.136.0"
uvicorn = "^0.44.0"
python-multipart = "^0.0.26"
requests = "^2.33.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.2.0"
ruff = "^0.6.9"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["isort", "test"]
extend-exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = 3.12
enable_error_code = ["truthy-bool", "ignore-without-code"]
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = true
